Repairing broken css

--- a/Darts-Phoebe/phoebetemp.css
+++ b/Darts-Phoebe/phoebetemp.css
@@ -174,7 +174,7 @@ a.index :hover {
 }
 
 
-section.dartssubsection {
+section.dartssection {
     padding: 2vw;
     height: 50vw;
 }
